--- a/src/css/resume.less
+++ b/src/css/resume.less
@@ -50,7 +50,7 @@ li {
 .resume {
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
     min-height: 500px;
-    margin: 50px auto;
+    margin: 30px auto;
     .row {
         overflow: hidden;
     }
@@ -66,9 +66,7 @@ li {
     }
     .hover-show {
         cursor: pointer;
-    } // .skills li {
-    //     margin: 0 0 24px 0;
-    // }
+    }
     .portrait {
         width: 128px;
         height: 158px;
@@ -138,7 +136,7 @@ li {
         background: #0b70bd;
         height: 100%;
         color: #fff;
-        padding: 40px 36px 1000px;
+        padding: 20px 36px 1000px;
         margin-bottom: -1000px;
         a {
             color: #fff;
@@ -168,7 +166,7 @@ li {
     .side-right {
         background: #fff;
         height: 100%;
-        padding: 40px 36px 1000px;
+        padding: 20px 36px 1000px;
         margin-bottom: -1000px;
         a {
             color: #333;
